--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,11 +14,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 # Requirements
-COPY requirements.txt /app/requirements.txt
+COPY backend/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # App
-COPY . /app
+COPY backend/ /app/
 
 EXPOSE 8000
 
