--- a/.github/workflows/publish-apk.yml
+++ b/.github/workflows/publish-apk.yml
@@ -53,7 +53,13 @@ jobs:
 
       - name: Download APK
         run: |
-          curl -L "${{ steps.eas_build.outputs.APK_URL }}" -o "$GITHUB_WORKSPACE/smartlistas-latest.apk"
+          curl -L "${{ steps.eas_build.outputs.APK_URL }}" -o "$GITHUB_WORKSPACE/mobile/smartlistas-latest.apk"
+
+      - name: Verify APK file exists
+        run: |
+          ls -la "$GITHUB_WORKSPACE"
+          ls -la "$GITHUB_WORKSPACE/mobile" || true
+          test -f "$GITHUB_WORKSPACE/mobile/smartlistas-latest.apk"
 
       - name: Publish GitHub Release asset
         uses: softprops/action-gh-release@v2
@@ -61,7 +67,7 @@ jobs:
           tag_name: apk-latest
           name: APK (última versão)
           prerelease: false
-          files: smartlistas-latest.apk
+          files: mobile/smartlistas-latest.apk
           fail_on_unmatched_files: true
           generate_release_notes: false
 
