--- a/.github/workflows/publish-apk.yml
+++ b/.github/workflows/publish-apk.yml
@@ -54,12 +54,14 @@ jobs:
       - name: Download APK
         run: |
           curl -L "${{ steps.eas_build.outputs.APK_URL }}" -o "$GITHUB_WORKSPACE/mobile/smartlistas-latest.apk"
+          cp -f "$GITHUB_WORKSPACE/mobile/smartlistas-latest.apk" "$GITHUB_WORKSPACE/smartlistas-latest.apk"
 
       - name: Verify APK file exists
         run: |
           ls -la "$GITHUB_WORKSPACE"
           ls -la "$GITHUB_WORKSPACE/mobile" || true
           test -f "$GITHUB_WORKSPACE/mobile/smartlistas-latest.apk"
+          test -f "$GITHUB_WORKSPACE/smartlistas-latest.apk"
 
       - name: Publish GitHub Release asset
         uses: softprops/action-gh-release@v2
@@ -67,7 +69,7 @@ jobs:
           tag_name: apk-latest
           name: APK (última versão)
           prerelease: false
-          files: mobile/smartlistas-latest.apk
+          files: smartlistas-latest.apk
           fail_on_unmatched_files: true
           generate_release_notes: false
 
