--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,11 +15,14 @@
     "expo": "~54.0.29",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.10",
+    "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
