--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "ota": "eas update --channel production",
     "ota:prod": "eas update --channel production",
     "ota:preview": "eas update --channel preview"
   },
